...
        dateStr = DateFormat('yyyy-MM-dd HH:mm').format(date);
      } catch (_) {}
    }

    return Scaffold(
      appBar: AppBar(
        title: const Text('Notification'),
        centerTitle: true,
      ),
      body: SingleChildScrollView(
        padding: const EdgeInsets.all(24.0),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
...
